# asadvanceit

./: .dockerignore  .gitignore  Dockerfile  composer.json  create_pending_user.php  create_users.php  package-lock.json  package.json  test_db.php
admin-server/: Cargo.toml  index.html
admin-server/src/: main.rs
agent-app/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
agent-app/src-tauri/: Cargo.toml  build_errors.txt  build_errors_2.txt  build_errors_3.txt  build_errors_4.txt  build_errors_5.txt  build_errors_6.txt  build_errors_7.txt  build_errors_8.txt  secret.key  secret.key.pub  tauri.conf.json
agent-app/src-tauri/icons/: icon.icns
agent-app/src-tauri/src/: dxgi.rs  encoder.rs  main.rs  webrtc_manager.rs
app/: helpers.php
app/Auth/: MD5UserProvider.php
app/Events/: AgentDataStream.php  ForceLogoutEvent.php  WebRTCSignaling.php
app/Models/: Device.php  GoogleSheet.php  Lead.php  LiveToken.php  MagicLoginToken.php  Message.php  Notification.php  SiteSetting.php  User.php
app/Providers/: AppServiceProvider.php  AuthServiceProvider.php
app/Services/: ShiftService.php  TelegramService.php
asit-spa/: .gitignore
asit-spa/client/: package-lock.json  package.json  vite.config.ts
asit-spa/server/: backend_error.txt  example.env  nest-cli.json  out.txt  package-lock.json  package.json  test-db.ts  tsconfig.build.tsbuildinfo  tsconfig.json
bootstrap/: app.php
config/: auth.php  telegram.php
dashboard/: README.md  add_live_token.php  add_notifications.php  add_workers.php  admin_dashboard.php  all_token.php  deploy.php  edit_workers.php  error_log  index.php  list_workers.php  manage_workers.php  mark_notification.php  mark_notification_read.php  morning_8_hours.php  my_lead.php  my_profile.php  my_tokens.php  security.php  template.php  user_dashboard.php  viewLead.php
docker/: entrypoint.sh  nginx.conf  supervisord.conf
public/: index.php
routes/: api.php  channels.php  web.php
(+252 files in other folders)
