[package]
name = "asadvanceit-agent"
version = "1.0.0"
description = "Advanced IT Agent App"
authors = ["Advanced IT"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
open = "5"
sysinfo = "0.30"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.5"
screenshots = "0.8"
image = "0.24"
base64 = "0.22"
futures-util = "0.3"
machine-uid = "0.3"
hostname = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
